# rl2048

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  game_2048_env.py  play_human.py  pyproject.toml  readme  reqs.txt  requirements.txt  train_sac.py  train_sac_sb3.py  use_model.py
conf/: env.yaml  train.yaml  train_sb3.yaml
examples/: govee_bulb.py
rl2048/: __init__.py
rl2048/envs/: __init__.py  game2048.py
rl2048/wrappers/: __init__.py  sb3.py
scripts/: train_sac.py
tests/: test_env.py
wandb/: latest-run
wandb/run-20250903_132659-yywec6x4/: run-yywec6x4.wandb
wandb/run-20250903_132659-yywec6x4/files/: config.yaml  wandb-metadata.json
wandb/run-20250903_132717-vye924h7/: run-vye924h7.wandb
wandb/run-20250903_132717-vye924h7/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250903_144800-0yyd546b/: run-0yyd546b.wandb
wandb/run-20250903_144800-0yyd546b/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250903_145514-sd5n4oni/: run-sd5n4oni.wandb
wandb/run-20250903_145514-sd5n4oni/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250903_150737-jl42gmxg/: run-jl42gmxg.wandb
wandb/run-20250903_150737-jl42gmxg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250903_160358-oa0iw8ul/: run-oa0iw8ul.wandb
wandb/run-20250903_160358-oa0iw8ul/files/: config.yaml  wandb-metadata.json  wandb-summary.json
